# Anti_uav_detection

./: .gitignore  Dockerfile  Makefile  README.md  config.toml  generate_configs.py  pre-commit-config.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  retro_log.py
.github/workflows/: cd.yml  ci.yml  model-eval.yml
.streamlit/: config.toml
app/: streamlit_app.py
app/pages/: image_detection.py  mlflow_dashboard.py  model_comparison.py  video_tracking.py
configs/: fasterrcnn_hp1.yaml  fasterrcnn_hp2.yaml  fasterrcnn_hp3.yaml  yolov11_hp1.yaml  yolov11_hp2.yaml  yolov11_hp3.yaml  yolov8_hp1.yaml  yolov8_hp2.yaml  yolov8_hp3.yaml
configs/models/: yolo11_mobilevit_s.yaml
docker/: Dockerfile.serve  docker-compose.yml
notebooks/: 02_Preprocessing.ipynb  03_YOLOv11_Training (1).ipynb  04_FasterRCNN_Training.ipynb  05_YOLOv8_Baseline.ipynb  06_Tracking_ByteTrack.ipynb  07_Hyperparameter_Tuning.ipynb  08_Final_Evaluation.ipynb
reports/: dataset_inventory.csv  fasterrcnn_hp_results.csv  yolov11_hp_results.csv  yolov8_hp_results.csv
src/data/: download_dataset.py  split_data.py
src/evaluation/: evaluate.py
src/models/: mobilevit_yolo.py
src/models/tracker/: bytetrack.py
src/training/: hyperparams.py  mlflow_callbacks.py  train.py
tests/: test_data_pipeline.py
