[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name        = "anti-uav-detection"
version     = "1.0.0"
description = "Anti-UAV Drone Detection & Tracking System — AI447 Computer Vision"
requires-python = ">=3.11"
readme      = "README.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

# ── Ruff (linting + formatting) ─────────────────────────────────────────
[tool.ruff]
line-length    = 100
target-version = "py311"
src            = ["src", "app", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "S",    # bandit (security)
    "N",    # pep8 naming
]
ignore = [
    "E501",  # line-length handled by formatter
    "S101",  # allow assert in tests
    "S311",  # allow random for data shuffling (not crypto)
    "B008",  # allow function calls as defaults
    "N806",  # allow uppercase in non-class (e.g., H, W for image dims)
]

[tool.ruff.lint.per-file-ignores]
"tests/*"     = ["S101", "S603"]
"notebooks/*" = ["E402", "F401", "F811"]

[tool.ruff.format]
quote-style = "double"

# ── Pytest ───────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths    = ["tests"]
timeout      = 120
addopts      = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

# ── Coverage ─────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["src"]
omit   = ["tests/*", "notebooks/*", "app/*"]

[tool.coverage.report]
show_missing = true
fail_under   = 70

# ── Bandit (security scanning) ───────────────────────────────────────────
[tool.bandit]
exclude_dirs = ["tests", "notebooks"]
skips        = ["B101", "B311", "B404", "B603", "B607"]
# B101: assert used  — OK in tests
# B311: random      — OK for data shuffling (not crypto)
# B404/603/607: subprocess — used deliberately for curl downloads
